--- a/css2.css
+++ b/css2.css
@@ -2,26 +2,30 @@ html{background-color: black;
 }
  
 h1{color: #ffffff;
-font-size: 300%;
+font-size: 600%;
 
+} div2{
+ p{color: #ffffff;
+    font-size: 300%;   
 }
-p{color: #ffffff;
-    font-size: 150%;
+
 }
 
     div{
 
 img{    height: vpx;
-        width: 150px;
+        width: 250px;
         padding-left: 30px;
         padding-top: 30px;
 }
 
-p{
+div3{
+    p{
     height: 10px;
     width: 10px;
-    padding-left: 85px;
+    padding-left: 115px;
 color: #ffffff;
-
+font-size: 200%;
 }
 }
+    }
